security 70%