@@ -1,10 +1,13 @@
 package uz.pdp.services;
 
+import lombok.SneakyThrows;
+import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.multipart.MultipartFile;
+import uz.pdp.dtos.EmailDto;
 import uz.pdp.dtos.UserDto;
 import uz.pdp.entities.ImageData;
 import uz.pdp.entities.Role;
@@ -19,6 +22,10 @@ import org.springframework.stereotype.Service;
 import uz.pdp.util.RoleEnum;
 
 import java.io.File;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.*;
 
 import static uz.pdp.util.Util.UPLOAD_DIRECTORY;
@@ -31,21 +38,33 @@ public class UserService implements UserDetailsService {
     private final ImageService imageService;
     private final PasswordEncoder passwordEncoder;
     private final RoleRepo roleRepo;
+    private final EmailWithHtmlTemplate emailWithHtmlTemplate;
 
-    public void save(UserDto userDto, MultipartFile image) {
-        Role roleUser = roleRepo.findByName(RoleEnum.ROLE_USER.name());
-        Set<Role> role = new HashSet<>(Collections.singletonList(roleUser));
+    public void save(UserDto userDto, MultipartFile image) throws IOException {
+        Role role = roleRepo.findByName(RoleEnum.ROLE_USER);
+        Set<Role> roles = new HashSet<>(List.of(role));
         User user = User
                 .builder()
                 .fullName(userDto.getFullName())
                 .username(userDto.getUsername())
                 .password(passwordEncoder.encode(userDto.getPassword()))
-                .roles(role)
+                .roles(roles)
                 .build();
-        ImageData save = imageService.save(image);
-        user.setImage(save);
-        userRepo.save(user);
+        if (image != null) {
+            ImageData logo = imageService.save(image);
+            user.setImage(logo);
+        } else {
+            Path path = Paths.get("src/main/resources/image/download.png");
+            MultipartFile defaultImage = new MockMultipartFile("download.png", "download.png",
+                    "image/png", Files.readAllBytes(path));
+            ImageData save = imageService.save(defaultImage);
+            user.setImage(save);
+        }
 
+
+        userRepo.save(user);
+        EmailDto emailDto = new EmailDto(user.getUsername(),"Verify","Hi Verify you email",user.getFullName(), user.getId());
+        emailWithHtmlTemplate.sendEmail(emailDto);
     }
 
     public Page<UserProjection> getAllUsers(int page, int size) {
@@ -66,10 +85,11 @@ public class UserService implements UserDetailsService {
         return userById.get();
     }
 
-    public boolean checkToUnique(String phoneNumber) {
-        return userRepo.checkToUnique(phoneNumber)!=null;
+    public boolean checkToUnique(String username) {
+        return userRepo.checkToUnique(username)!=null;
     }
 
+    @SneakyThrows
     public void edit(UserDto userDto, MultipartFile image) {
         List<Role> allById = roleRepo.findAllById(userDto.getRolesId());
         Set<Role> roles = new HashSet<>(allById);
@@ -78,12 +98,23 @@ public class UserService implements UserDetailsService {
                 .username(userDto.getUsername())
                 .roles(roles)
                 .password(passwordEncoder.encode(userDto.getPassword()))
+                .isEnabled(true)
                 .build();
         user.setId(userDto.getId());
         Optional<UserProjection> userById = userRepo.getUserById(user.getId());
         File file = new File(UPLOAD_DIRECTORY + userById.get().getPhotoName());
         file.delete();
-        imageService.save(image);
+        if (image != null) {
+            ImageData logo = imageService.save(image);
+            user.setImage(logo);
+        } else {
+            Path path = Paths.get("src/main/resources/image/download.png");
+            MultipartFile defaultImage = new MockMultipartFile("download.png", "download.png",
+                    "image/png", Files.readAllBytes(path));
+            ImageData save = imageService.save(defaultImage);
+            user.setImage(save);
+        }
+//        imageService.save(image);
         userRepo.save(user);
     }
 
@@ -92,6 +123,15 @@ public class UserService implements UserDetailsService {
         Optional<User> user = userRepo.findByUsername(username);
         if (user.isEmpty()) throw new RuntimeException("User not found");
         return user.get();
+    }
+
+    public boolean verify(Integer id) {
+        try {
+            userRepo.verify(id);
+            return true;
+        } catch (Exception e) {
+            return false;
+        }
     }
 }
 
